--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,11 +33,9 @@ endif()
 if(NOT EXISTS "${IRRLICHT_INCLUDE_DIR}")
     message(FATAL_ERROR "Irrlicht include directory not found at: ${IRRLICHT_INCLUDE_DIR}")
 endif()
-
 if(NOT EXISTS "${IRRLICHT_LIBRARY_FILE}")
     message(FATAL_ERROR "Irrlicht library not found at: ${IRRLICHT_LIBRARY_FILE}")
 endif()
-
 if(WIN32 AND NOT EXISTS "${IRRLICHT_DLL_FILE}")
     message(FATAL_ERROR "Irrlicht DLL not found at: ${IRRLICHT_DLL_FILE}")
 endif()
@@ -56,80 +54,115 @@ else()
     message(FATAL_ERROR "Recast Navigation not found at: ${RECAST_ROOT}")
 endif()
 
-# --- Auto-discover all source files ---
-file(GLOB_RECURSE SOURCE_FILES 
-    "${CMAKE_SOURCE_DIR}/src/*.cpp"
-    "${CMAKE_SOURCE_DIR}/src/*.c"
+# --- Define Core Library Files ---
+# *** Config.h REMOVED from LIB_HEADERS ***
+set(LIB_SOURCES
+    "${CMAKE_SOURCE_DIR}/src/AbstractNavMesh.cpp"
+    "${CMAKE_SOURCE_DIR}/src/StaticNavMesh.cpp"
+    "${CMAKE_SOURCE_DIR}/src/TiledNavMesh.cpp"
+)
+set(LIB_HEADERS
+    "${CMAKE_SOURCE_DIR}/src/AbstractNavMesh.h"
+    "${CMAKE_SOURCE_DIR}/src/StaticNavMesh.h"
+    "${CMAKE_SOURCE_DIR}/src/TiledNavMesh.h"
 )
 
-file(GLOB_RECURSE HEADER_FILES 
-    "${CMAKE_SOURCE_DIR}/src/*.h"
-    "${CMAKE_SOURCE_DIR}/src/*.hpp"
-)
+# --- Define Your NavMesh Library (STATIC) ---
+add_library(IrrRecastDetour STATIC ${LIB_SOURCES} ${LIB_HEADERS})
 
-# --- Your Project Executable ---
-add_executable(IrrRecastDetour ${SOURCE_FILES} ${HEADER_FILES})
-
-set_target_properties(IrrRecastDetour PROPERTIES
-    VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:IrrRecastDetour>"
-)
-
-# --- Link Irrlicht ---
-target_include_directories(IrrRecastDetour PRIVATE 
-    ${IRRLICHT_INCLUDE_DIR}
-    "${CMAKE_SOURCE_DIR}/src"
-)
-
-target_link_libraries(IrrRecastDetour PRIVATE 
-    ${IRRLICHT_LIBRARY_FILE}
+# --- Link Recast/Detour TO your library ---
+# We use PUBLIC so that any executable linking to IrrRecastDetour
+# also links to these and gets their include paths.
+target_link_libraries(IrrRecastDetour PUBLIC 
     Recast
     Detour
     DetourCrowd
     DetourTileCache
 )
 
-# Additional Windows-specific libraries that Irrlicht depends on
-if(WIN32)
-    target_link_libraries(IrrRecastDetour PRIVATE winmm.lib)
-endif()
-
-# Organize files in Visual Studio
-source_group("Source Files" FILES ${SOURCE_FILES})
-source_group("Header Files" FILES ${HEADER_FILES})
+# --- Set include directories for your library ---
+target_include_directories(IrrRecastDetour PUBLIC
+    ${IRRLICHT_INCLUDE_DIR}
+    "${CMAKE_SOURCE_DIR}/src"  # Demos still need this to find the lib headers
+)
 
 message(STATUS "Irrlicht include directory: ${IRRLICHT_INCLUDE_DIR}")
 message(STATUS "Irrlicht library file: ${IRRLICHT_LIBRARY_FILE}")
-message(STATUS "Found ${CMAKE_MATCH_COUNT} source files")
 
-# --- Post-Build Step (Copy the DLL on Windows) ---
-if(WIN32)
-    add_custom_command(TARGET IrrRecastDetour POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        "${IRRLICHT_DLL_FILE}"
-        $<TARGET_FILE_DIR:IrrRecastDetour>
-        COMMENT "Copying Irrlicht.dll to executable directory"
+# --- == Demos == ---
+
+# --- Define files common to all demos ---
+# *** Config.h ADDED to DEMO_COMMON_SOURCES ***
+set(DEMO_COMMON_SOURCES
+    "${CMAKE_SOURCE_DIR}/src/InputEventReceiver.cpp"
+    "${CMAKE_SOURCE_DIR}/src/InputEventReceiver.h"
+    "${CMAKE_SOURCE_DIR}/src/Config.h"
+)
+
+# --- Demo 1: Static NavMesh ---
+add_executable(Demo_Static
+    "${CMAKE_SOURCE_DIR}/src/Demo_Static.cpp"
+    ${DEMO_COMMON_SOURCES}
+)
+
+# --- Demo 2: Tiled NavMesh ---
+add_executable(Demo_Tiled
+    "${CMAKE_SOURCE_DIR}/src/Demo_Tiled.cpp"
+    ${DEMO_COMMON_SOURCES}
+)
+
+# --- Link Demos ---
+set(DEMO_TARGETS
+    Demo_Static
+    Demo_Tiled
+)
+
+foreach(DEMO_TARGET ${DEMO_TARGETS})
+    # Link our navmesh library
+    target_link_libraries(${DEMO_TARGET} PRIVATE IrrRecastDetour)
+    
+    # Link Irrlicht
+    target_link_libraries(${DEMO_TARGET} PRIVATE ${IRRLICHT_LIBRARY_FILE})
+    
+    # Additional Windows-specific libraries that Irrlicht depends on
+    if(WIN32)
+        target_link_libraries(${DEMO_TARGET} PRIVATE winmm.lib)
+    endif()
+
+    set_target_properties(${DEMO_TARGET} PROPERTIES
+        VS_DEBUGGER_WORKING_DIRECTORY "$<TARGET_FILE_DIR:${DEMO_TARGET}>"
     )
-    message(STATUS "Irrlicht DLL: ${IRRLICHT_DLL_FILE}")
-endif()
 
-# --- Post-Build Step (Copy runtime assets) ---
-# Define the SOURCE directory (where your assets are)
-set(ASSETS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
+    # --- Post-Build Step (Copy the DLL on Windows) ---
+    if(WIN32)
+        add_custom_command(TARGET ${DEMO_TARGET} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            "${IRRLICHT_DLL_FILE}"
+            $<TARGET_FILE_DIR:${DEMO_TARGET}>
+            COMMENT "Copying Irrlicht.dll to ${DEMO_TARGET} directory"
+        )
+    endif()
 
-# Define the DESTINATION directory (next to your .exe)
-# $<TARGET_FILE_DIR:IrrRecastDetour> is a generator expression
-# that correctly finds the executable's output folder.
-set(ASSETS_DEST_DIR "$<TARGET_FILE_DIR:IrrRecastDetour>/assets")
+    # --- Post-Build Step (Copy runtime assets) ---
+    set(ASSETS_DEST_DIR "$<TARGET_FILE_DIR:${DEMO_TARGET}>/assets")
+    set(ASSETS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/assets")
+    
+    if(EXISTS "${ASSETS_SOURCE_DIR}")
+        add_custom_command(TARGET ${DEMO_TARGET} POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
+            "${ASSETS_SOURCE_DIR}"  # <-- Source
+            "${ASSETS_DEST_DIR}"    # <-- Destination
+            COMMENT "Copying 'assets' directory to ${DEMO_TARGET} directory"
+        )
+    else()
+        message(WARNING "assets directory not found at: ${ASSETS_SOURCE_DIR}")
+    endif()
+endforeach()
 
-# Check if the SOURCE directory exists
-if(EXISTS "${ASSETS_SOURCE_DIR}")
-    add_custom_command(TARGET IrrRecastDetour POST_BUILD
-        COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different
-        "${ASSETS_SOURCE_DIR}"  # <-- Source
-        "${ASSETS_DEST_DIR}"    # <-- Destination
-        COMMENT "Copying 'assets' directory to executable directory"
-    )
-    message(STATUS "Will copy assets from: ${ASSETS_SOURCE_DIR}")
-else()
-    message(WARNING "assets directory not found at: ${ASSETS_SOURCE_DIR}")
-endif()
+
+# --- Organize files in Visual Studio ---
+# *** Config.h moved from "Library" to "Demos" group ***
+source_group("Library" FILES ${LIB_SOURCES} ${LIB_HEADERS})
+source_group("Demos" FILES ${DEMO_COMMON_SOURCES} 
+                            "${CMAKE_SOURCE_DIR}/src/Demo_Static.cpp" 
+                            "${CMAKE_SOURCE_DIR}/src/Demo_Tiled.cpp")
